Complete refactor of the max hit plugin by Matt12years later

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Max Hit
+author=Seebity
+support=https://github.com/Seebity/max_hit.git
+description=Tells the player their max hit in their current gear
+tags=max, hit, spec, pvp, magic, spell, combat
+plugins=com.maxhit.MaxHitPlugin
